Hoisted out search_refined_method

[Bug #16107]